2005-05-26  Dan Winship  <danw@novell.com>

	* stetic/Stetic.cs (Main): Load the UI from a glade file rather
	than hardcoding it.

	* stetic/stetic.glade: the UI, now editable in itself

	* stetic/Glade.cs: Rename this class to GladeFiles, because C#'s
	namespacing rules suck.

	* stetic/Makefile.am: add stetic.glade as a resource

	* libstetic/wrapper/Container.cs (LookupParent): don't return
	Unselectable wrappers

	* libstetic/wrapper/Custom.cs (Int1, Int2): Add RangeAttributes
	to these so the property grid doesn't crash

	* libstetic/wrapper/Paned.cs (ReplaceChild): Make this actually
	work.

	* libstetic/wrapper/ScrolledWindow.cs (ReplaceChild,
	AddPlaceholder): when using a Viewport, create an (unselectable)
	ObjectWrapper for it.
	(RealChildren, GladeChildren): override to make the viewport show
	up when glade-exporting, but not otherwise.

	* libstetic/wrapper/Viewport.cs: new, wrapper for Gtk.Viewport.

2005-05-26  Dan Winship  <danw@novell.com>

	* libstetic/GladeUtils.cs (ParseFlags, PropToString): Remove
	special cases for TableChild options (now handled in Table.cs).
	Use PropertyDescriptor.HasDefault.

	* libstetic/IStetic.cs (Selection): Make this a Gtk.Widget, not a
	Stetic.Wrapper.Widget, so we can keep more careful track of
	Placeholder selections.

	* libstetic/PropertyDescriptor.cs (HasDefault): new settable
	property to say whether or not the property has a default value.
	(See Scale.cs below).

	* libstetic/wrapper/Bin.cs (GladeImport): at GladeImportComplete
	time, if the bin is empty, add a Placeholder.

	* libstetic/wrapper/Button.cs (GladeImport, GladeChildren): dtrt
	with buttons that contain placeholders.
	(FixupGladeChildren): set UseUnderline correctly.
	(GladeExport): handle stock buttons correctly

	* libstetic/wrapper/ButtonBox.cs (GladeImportChild): fix the
	"Help" button case.

	* libstetic/wrapper/Container.cs (LookupParent): was
	Widget.ParentWrapper, but now can be used for Placeholders as
	well.