@@ -35,6 +35,19 @@ namespace Stetic.Wrapper {
 			}
 		}
 
+		// DoSync() does two things: first, it makes sure that all of the
+		// PackStart widgets have Position numbers less than all of the
+		// PackEnd widgets. Second, it creates faults anywhere two widgets
+		// could be split apart. The fault IDs correspond to the Position
+		// a widget would have to be assigned to end up in that slot
+		// (negated for PackEnd slots).
+		//
+		// Position/PackType:   0S 1S 2S     4E  3E
+		//                    +----------------------+
+		//                    | AA BB CC     DD  EE  |
+		//                    +----------------------+
+		// Fault Id:           0  1  2  3  -5  -4  -3
+
 		protected override void DoSync ()
 		{
 			if (!box.IsRealized)
@@ -47,6 +60,7 @@ namespace Stetic.Wrapper {
 				return;
 
 			Gtk.Widget[] sorted = new Gtk.Widget[children.Length];
+			int last_start = -1;
 
 			foreach (Gtk.Widget child in children) {
 				Gtk.Box.BoxChild bc = box[child] as Gtk.Box.BoxChild;
@@ -58,30 +72,58 @@ namespace Stetic.Wrapper {
 						bc.Fill = exp;
 				}
 
+				// Make sure all of the PackStart widgets are before
+				// any PackEnd widgets in the list.
+				if (bc.PackType == Gtk.PackType.Start) {
+					if (bc.Position != ++last_start) {
+						Array.Copy (sorted, last_start, sorted, last_start + 1, bc.Position - last_start);
+						box.ReorderChild (child, last_start);
+					}
+				}
+
 				if (!(child is Placeholder))
 					sorted[bc.Position] = child;
 			}
 
-			if (this is HBox || this is HButtonBox) {
-				if (sorted[0] != null)
-					DND.AddVFault (this, 0, null, sorted[0]);
-				if (sorted[sorted.Length - 1] != null)
-					DND.AddVFault (this, sorted.Length, sorted[sorted.Length - 1], null);
-			} else {
-				if (sorted[0] != null)
-					DND.AddHFault (this, 0, null, sorted[0]);
-				if (sorted[sorted.Length - 1] != null)
-					DND.AddHFault (this, sorted.Length, sorted[sorted.Length - 1], null);
+			bool hbox = (this is HBox || this is HButtonBox);
+			// The orientation of the faults is the opposite of the
+			// orientation of the box
+			Gtk.Orientation orientation = hbox ? Gtk.Orientation.Vertical : orientation = Gtk.Orientation.Horizontal;
+			Gtk.SideType before = hbox ? Gtk.SideType.Left : Gtk.SideType.Top;
+			Gtk.SideType after = hbox ? Gtk.SideType.Right : Gtk.SideType.Bottom;
+
+			// If there are no PackStart widgets, we need a fault at the leading
+			// edge. Otherwise if there's a widget at the leading edge, we need a
+			// fault before it.
+			if (last_start == -1)
+				DND.AddFault (this, 0, before, null);
+			else if (sorted[0] != null)
+				DND.AddFault (this, 0, before, sorted[0]);
+
+			// Add a fault between each pair of (non-placeholder) start widgets
+			for (int i = 1; i <= last_start; i++) {
+				if (sorted[i - 1] != null && sorted[i] != null)
+					DND.AddFault (this, i, orientation, sorted[i - 1], sorted[i]);
 			}
 
-			for (int i = 1; i < sorted.Length; i++) {
-				if (sorted[i - 1] != null && sorted[i] != null) {
-					if (this is HBox || this is HButtonBox)
-						DND.AddVFault (this, i, sorted[i - 1], sorted[i]);
-					else
-						DND.AddHFault (this, i, sorted[i - 1], sorted[i]);
-				}
+			// If there's a non-placeholder at the end of the PackStart
+			// range, add a fault after it
+			if (last_start > -1 && sorted[last_start] != null)
+				DND.AddFault (this, last_start + 1, after, sorted[last_start]);
+
+			// Now the PackEnd widgets
+			if (last_start == sorted.Length - 1)
+				DND.AddFault (this, -(last_start + 1), after, null);
+			else if (sorted[last_start + 1] != null)
+				DND.AddFault (this, -(last_start + 1), after, sorted[last_start + 1]);
+
+			for (int i = last_start + 2; i < sorted.Length; i++) {
+				if (sorted[i - 1] != null && sorted[i] != null)
+					DND.AddFault (this, -i, orientation, sorted[i - 1], sorted[i]);
 			}
+
+			if (sorted.Length > last_start + 1 && sorted[sorted.Length - 1] != null)
+				DND.AddFault (this, -sorted.Length, before, sorted[sorted.Length - 1]);
 		}
 
 		[Command ("Insert Before", "Insert an empty row/column before the selected one")]
@@ -141,11 +183,18 @@ namespace Stetic.Wrapper {
 		public override void Drop (Gtk.Widget w, object faultId)
 		{
 			AutoSize[w] = true;
-			box.PackStart (w);
-			box.ReorderChild (w, (int)faultId);
-			EmitContentsChanged ();
+			int pos = (int)faultId;
 
-			Sync ();
+			Freeze ();
+			if (pos >= 0) {
+				box.PackStart (w);
+				box.ReorderChild (w, pos);
+			} else {
+				box.PackEnd (w);
+				box.ReorderChild (w, -pos);
+			}
+			EmitContentsChanged ();
+			Thaw ();
 		}
 
 		public class BoxChild : Container.ContainerChild {
